--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -20,8 +20,12 @@ if(TESTS_USE_ICD)
   if(OPENCL_FOUND)
     set(OPENCL_LIBS ${OPENCL_LIBRARIES})
   else()
-    message(WARNING "Tests-use-ICD requested, but cannot find an OpenCL library; adding -lOpenCL to LDFLAGS")
-    set(OPENCL_LIBS "-lOpenCL")
+    if (WIN32)
+      message(STATUS "TODO: add FindOpenCL.cmake to find out installed OpenCL drivers. All of them in windows install ICD loader.")
+    else()
+      message(WARNING "Tests-use-ICD requested, but cannot find an OpenCL library; adding -lOpenCL to LDFLAGS")
+      set(OPENCL_LIBS "-lOpenCL")
+    endif()
   endif()
 
   set(OPENCL_EXTLIBS ${OPENCL_LIBS})
