Fixed some restrict attributes to be vc++ compatible. Changed some parts of pocl C code to be compiled with c++ compiler with visual studio.

--- a/examples/scalarwave/CMakeLists.txt
+++ b/examples/scalarwave/CMakeLists.txt
@@ -38,6 +38,11 @@ add_definitions("-DSRCDIR=\"${CMAKE_CURRENT_SOURCE_DIR}\"")
 #scalarwave_CFLAGS = -std=c99 @OPENCL_CFLAGS@
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 ${OPENCL_CFLAGS}")
 
+# With visual studio c++ compiler also for .c files
+if (MSVC)
+SET_SOURCE_FILES_PROPERTIES( scalarwave.c PROPERTIES LANGUAGE CXX )
+endif (MSVC)
+
 add_executable("scalarwave" scalarwave.c scalarwave.cl)
 
 #scalarwave_LDADD = -lm @OPENCL_LIBS@ ../../lib/poclu/libpoclu.la
