Added compiled clang includes to path and handling space in directory path.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,11 +106,11 @@ endif()
 # with uninstalled llvm this points to llvm source directory's includes...
 # which does not contain e.g. Support/DataTypes.h
 include_directories("${LLVM_INCLUDEDIR}")
-
 include_directories("${LLVM_SRC_ROOT}/tools/clang/include")
 
 # compiled includes...
 include_directories("${LLVM_OBJ_ROOT}/include")
+include_directories("${LLVM_OBJ_ROOT}/tools/clang/include")
 
 ######################################################################################
 
@@ -954,7 +954,8 @@ MESSAGE(STATUS "LLVM_LDFLAGS: ${LLVM_LDFLAGS}")
 MESSAGE(STATUS "LLVM_LIBDIR: ${LLVM_LIBDIR}")
 MESSAGE(STATUS "LLVM_INCLUDEDIR: ${LLVM_INCLUDEDIR}")
 MESSAGE(STATUS "LLVM_OBJ_ROOT: ${LLVM_OBJ_ROOT}")
-# these are a bit too long..
+MESSAGE(STATUS "LLVM_SRC_ROOT: ${LLVM_SRC_ROOT}")
+  # these are a bit too long..
 #MESSAGE(STATUS "LLVM_LIBS: ${LLVM_LIBS}")
 #MESSAGE(STATUS "LLVM_LIBFILES: ${LLVM_LIBFILES}")
 MESSAGE(STATUS "LLVM_ALL_TARGETS: ${LLVM_ALL_TARGETS}")
