Fixed linking llvm to pocl.dll on visual studio when llvm is not installed in PATH.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,9 @@ include_directories("${LLVM_SRC_ROOT}/tools/clang/include")
 include_directories("${LLVM_OBJ_ROOT}/include")
 include_directories("${LLVM_OBJ_ROOT}/tools/clang/include")
 
+# link directories if not globally installed llvm
+link_directories(${LLVM_LIBDIR})
+
 ######################################################################################
 
 # if variable FEATURE_X isnt defined, sets it to DEFAULT_FEATURE_X;
@@ -975,9 +978,9 @@ MESSAGE(STATUS "LLVM_SRC_ROOT: ${LLVM_SRC_ROOT}")
 MESSAGE(STATUS "PATCH_EXEC: ${PATCH_EXEC}")
 MESSAGE(STATUS "XARGS_EXEC: ${XARGS_EXEC}")
 MESSAGE(STATUS "CAT_EXEC: ${CAT_EXEC}")
-  # these are a bit too long..
-#MESSAGE(STATUS "LLVM_LIBS: ${LLVM_LIBS}")
-#MESSAGE(STATUS "LLVM_LIBFILES: ${LLVM_LIBFILES}")
+# these are a bit too long..
+MESSAGE(STATUS "LLVM_LIBS: ${LLVM_LIBS}")
+MESSAGE(STATUS "LLVM_LIBFILES: ${LLVM_LIBFILES}")
 MESSAGE(STATUS "LLVM_ALL_TARGETS: ${LLVM_ALL_TARGETS}")
 MESSAGE(STATUS "LLVM_HOST_TARGET: ${LLVM_HOST_TARGET}")
 MESSAGE(STATUS "LLC_TRIPLE: ${LLC_TRIPLE}")
@@ -989,6 +992,10 @@ MESSAGE(STATUS "POCL_DEVICE_ADDRESS_BITS: ${POCL_DEVICE_ADDRESS_BITS}")
 MESSAGE(STATUS "POCL_LLVM_LIBS: ${POCL_LLVM_LIBS}")
 MESSAGE(STATUS "TCE_TARGET_CLANG_FLAGS: ${TCE_TARGET_CLANG_FLAGS}")
 MESSAGE(STATUS "TCE_TARGET_LLC_FLAGS: ${TCE_TARGET_LLC_FLAGS}")
+MESSAGE(STATUS "Hwloc_LIBRARIES: ${Hwloc_LIBRARIES}")
+MESSAGE(STATUS "Hwloc_INCLUDE_DIRS: ${Hwloc_INCLUDE_DIRS}")
+MESSAGE(STATUS "Pthreads_LIBRARIES: ${Pthreads_LIBRARIES}")
+MESSAGE(STATUS "Pthreads_INCLUDE_DIRS: ${Pthreads_INCLUDE_DIRS}")
 
 
 MESSAGE(STATUS " ")
