--- a/lib/CL/devices/topology/CMakeLists.txt
+++ b/lib/CL/devices/topology/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_compile_options(${HWLOC_CFLAGS})
 add_library("pocl-devices-topology" OBJECT pocl_topology.c pocl_topology.h)
+if (MSVC)
+  SET_SOURCE_FILES_PROPERTIES( pocl_topology.c pocl_topology.h PROPERTIES LANGUAGE CXX )
+endif (MSVC)
