--- a/lib/CL/devices/basic/CMakeLists.txt
+++ b/lib/CL/devices/basic/CMakeLists.txt
@@ -1,1 +1,4 @@
 add_library("pocl-devices-basic" OBJECT basic.h basic.c)
+if (MSVC)
+  SET_SOURCE_FILES_PROPERTIES(  basic.h basic.c PROPERTIES LANGUAGE CXX )
+endif (MSVC)
