Added dllexport attribute to cl_platform and added alternative way to give API to export as .def file to build files.

--- a/lib/CL/CMakeLists.txt
+++ b/lib/CL/CMakeLists.txt
@@ -150,7 +150,9 @@ if(DIRECT_LINKAGE)
   add_library("OpenCL" ${LIBPOCL_OBJS})
   set_target_properties("OpenCL" PROPERTIES SOVERSION "${LIB_API_VERSION}" VERSION "${LIB_BUILD_VERSION}" LINK_FLAGS "${LLVM_LDFLAGS} ${ICD_LD_FLAGS}")
   if (MSVC)
-    target_link_libraries("OpenCL" ${LLVM_MSVC_STATIC_LIB_LIST} ${Hwloc_LIBRARIES} ${Pthreads_LIBRARIES})
+    # TODO: ADD SOME .DEF TO EXPORT SYMBOLS AND TO EXPORT .LIB FOR DLL
+	# set (CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} \"/DEF:${CMAKE_CURRENT_SOURCE_DIR}/msvc_opencl.def\"")
+	target_link_libraries("OpenCL" ${LLVM_MSVC_STATIC_LIB_LIST} ${Hwloc_LIBRARIES} ${Pthreads_LIBRARIES})
   else()
     target_link_libraries("OpenCL" PUBLIC ${POCL_PUBLIC_LINK_LIST} PRIVATE ${POCL_PRIVATE_LINK_LIST} )
   endif ()
