Removed header from build list to prevent triggering #error in Visual Studio.

--- a/lib/CL/CMakeLists.txt
+++ b/lib/CL/CMakeLists.txt
@@ -113,7 +113,7 @@ set(POCL_LIB_SOURCES  "clCreateContextFromType.c"
                    "clRetainDevice.c"
                    "pocl_cl.h" "pocl_util.h" "pocl_util.c"
                    "pocl_image_util.c" "pocl_image_util.h"
-                   "pocl_icd.h" "pocl_intfn.h" "pocl_llvm.h"
+                   "pocl_icd.h" "pocl_llvm.h"
                    "pocl_runtime_config.c" "pocl_runtime_config.h"
                    "pocl_mem_management.c"  "pocl_mem_management.h"
                    "pocl_llvm_api.cc" "pocl_hash.c")
