Added resolving correct llvm / clang shared / static library names for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1052,10 +1052,11 @@ MESSAGE(STATUS "LLVM_SRC_ROOT: ${LLVM_SRC_ROOT}")
 MESSAGE(STATUS "LLVM_OBJ_ROOT: ${LLVM_OBJ_ROOT}")
 MESSAGE(STATUS "LLVM_INCLUDE_DIRS: ${LLVM_INCLUDE_DIRS}")
 # these are a bit too long..
+MESSAGE(STATUS "CLANG_SHARED_LIBS: ${CLANG_SHARED_LIBS}")
+MESSAGE(STATUS "CLANG_STATIC_LIBS: ${CLANG_STATIC_LIBS}")
 MESSAGE(STATUS "LLVM_LIBS: ${LLVM_LIBS}")
 MESSAGE(STATUS "LLVM_SYSLIBS: ${LLVM_SYSLIBS}")
-MESSAGE(STATUS "LLVM_ALL_LIBS: ${LLVM_ALL_LIBS}")
-#MESSAGE(STATUS "LLVM_LIBFILES: ${LLVM_LIBFILES}")
+MESSAGE(STATUS "LLVM_LIBFILES: ${LLVM_LIBFILES}")
 MESSAGE(STATUS "LLVM_ALL_TARGETS: ${LLVM_ALL_TARGETS}")
 MESSAGE(STATUS "LLVM_HOST_TARGET: ${LLVM_HOST_TARGET}")
 MESSAGE(STATUS "LLC_TRIPLE: ${LLC_TRIPLE}")
