--- a/tests/regression/CMakeLists.txt
+++ b/tests/regression/CMakeLists.txt
@@ -35,11 +35,24 @@ set(PROGRAMS_TO_BUILD test_barrier_between_for_loops test_early_return
 # POCLU_LINK_OPTIONS
 
 #AM_CXXFLAGS = @OPENCL_CFLAGS@ -Wno-deprecated -Wno-deprecated-declarations
-add_compile_options("-Wno-deprecated" "-Wno-deprecated-declarations" ${OPENCL_CFLAGS})
+if (MSVC)
+  add_compile_options(${OPENCL_CFLAGS})
+else ()
+  add_compile_options("-Wno-deprecated" "-Wno-deprecated-declarations" ${OPENCL_CFLAGS})
+endif ()
+ 
 
 #AM_CPPFLAGS = -I$(top_srcdir)/fix-include -I$(top_builddir)/include -I$(top_srcdir)/include -I$(top_srcdir)/lib/CL -DSRCDIR='"$(abs_srcdir)"'
 add_definitions("-DSRCDIR=\"${CMAKE_CURRENT_SOURCE_DIR}\"")
-include_directories("${CMAKE_SOURCE_DIR}/lib/CL")
+
+if (!MSVC)
+  include_directories("${CMAKE_SOURCE_DIR}/fix-include")
+endif ()
+
+include_directories(
+  "${CMAKE_SOURCE_DIR}/include" 
+  "${CMAKE_SOURCE_DIR}/lib/CL" 
+)
 
 #TODO some quirk required ?
 #AM_DEFAULT_SOURCE_EXT = .cpp
