--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -295,16 +295,16 @@ option(STATIC_LLVM "Link LLVM statically. Default is dynamic." OFF)
 
 if(STATIC_LLVM)
   message(STATUS "Linking LLVM statically")
-  set(POCL_LLVM_LIBS "${LLVM_LIBFILES} ${CLANG_STATIC_LIBS}")
+  set(POCL_LLVM_LIBS "${LLVM_LIBFILES} ${CLANG_STATIC_LIBS} ${LLVM_SYSLIBS}")
 else()
   message(STATUS "Trying to link LLVM dynamically")
-  set(POCL_LLVM_LIBS "-lLLVM-${LLVM_VERSION} ${CLANG_SHARED_LIBS}")
+  set(POCL_LLVM_LIBS "-lLLVM-${LLVM_VERSION} ${CLANG_SHARED_LIBS} ${LLVM_SYSLIBS}")
   # in
   find_library(LLVM_SHARED_LIB_FILE "LLVM-${LLVM_VERSION}" PATHS "${LLVM_LIBDIR}" NO_DEFAULT_PATH)
   if(LLVM_SHARED_LIB_FILE AND EXISTS "${LLVM_SHARED_LIB_FILE}")
     message(STATUS "..using ${LLVM_SHARED_LIB_FILE}")
   else()
-    set(POCL_LLVM_LIBS "${LLVM_LIBS} ${CLANG_SHARED_LIBS}")
+    set(POCL_LLVM_LIBS "${LLVM_LIBS} ${CLANG_SHARED_LIBS} ${LLVM_SYSLIBS}")
     message(STATUS "LLVM-${LLVM_VERSION} library not found (Probably because LLVM is built with cmake).
     Linking libpocl (possibly statically) to LLVM_LIBS")
   endif()
